--- a/frontend/src/static/index.html
+++ b/frontend/src/static/index.html
@@ -7,6 +7,7 @@
   <title>Fullstack Template</title> 
 </head> 
 <body> 
-  <section id="root"></section> 
+  <section id="root"></section>
+  <script src="/bundle.js"></script>
 </body> 
 </html> 
